--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  -lint:
+  lint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -17,7 +17,7 @@ jobs:
     - name: Run linter
       run: yarn lint
 
-  -test:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
