--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,31 @@
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install # will run `yarn install` command
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-    - name: Install dependencies
-      uses: bahmutov/npm-install@v1
-
-    - name: Run linter
-      run: yarn lint
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: lint # will run `yarn lint` command
 
   test:
     runs-on: ubuntu-latest
@@ -24,14 +34,19 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-
-    - name: Install dependencies
-      uses: bahmutov/npm-install@v1
-
-    - name: Run test cases
-      run: yarn test
-
-    - name: Upload coverage to Codecov  
-      uses: codecov/codecov-action@v1
+    - uses: borales/actions-yarn@v2.0.0
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        cmd: install # will run `yarn install` command
+    - name: Get yarn cache
+      id: yarn-cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+
+    - uses: actions/cache@v1
+      with:
+        path: ${{ steps.yarn-cache.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: test # will run `yarn test` command
