--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,7 @@ jobs:
     - uses: borales/actions-yarn@v2.0.0
       with:
         cmd: test # will run `yarn test` command
+    - name: Upload coverage to Codecov
+    - uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
