--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
       with:
         cmd: test # will run `yarn test` command
     - name: Upload coverage to Codecov
+      id: coverage-codecov
     - uses: codecov/codecov-action@v1.0.5
       with:
         name: test-action
